@@ -6,7 +6,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
-// --- JACKSON IMPORTS ---
 import com.fasterxml.jackson.annotation.JsonAlias;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -14,45 +13,38 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.ObjectWriter;
 
 /**
- * Manages all 2048 game logic, state, persistence (save/load via JSON/Jackson),
- * and history tracking for the undo feature.
+ * Manages game logic, board state, undo history, and JSON persistence.
  */
 public class GameController {
 
     private static final int BOARD_SIZE = 4;
-    private static final int HISTORY_LIMIT = 1; // Maximum number of past moves to store
-    private static final int WINNING_TILE_VALUE = 2048; // The tile value required to "win"
+    private static final int HISTORY_LIMIT = 1; // Depth of undo history
+    private static final int WINNING_TILE_VALUE = 2048;
 
+    // Define save file location in user's home directory
     private static final String SAVE_FILE;
     static {
         SAVE_FILE = System.getProperty("user.home") + File.separator + "2048_save.json";
     }
 
-    // --- Game State ---
+    // --- Game State Fields ---
     private int[][] gameBoard;
     private long score;
     private boolean isGameOver;
-    private boolean hasWon; // Tracks if the 2048 tile has been created
-    private boolean continuePlaying; // Tracks if the user chose to keep playing after winning
+    private boolean hasWon;
+    private boolean continuePlaying;
     private List<HighScore> highScores;
 
     @JsonIgnore
     private final Random random;
 
-    // --- History Tracking ---
+    // --- History for Undo ---
     private List<int[][]> boardHistory;
     private List<Long> scoreHistory;
 
-    /**
-     * Enum for handling move direction cleanly.
-     */
-    public enum Direction {
-        UP, DOWN, LEFT, RIGHT
-    }
+    public enum Direction { UP, DOWN, LEFT, RIGHT }
 
-    /**
-     * Public default constructor required for Jackson deserialization.
-     */
+    // Constructor initializes a fresh game state
     public GameController() {
         this.random = new Random();
         this.gameBoard = new int[BOARD_SIZE][BOARD_SIZE];
@@ -62,68 +54,46 @@ public class GameController {
         this.continuePlaying = false;
         this.boardHistory = new ArrayList<>();
         this.scoreHistory = new ArrayList<>();
-        this.highScores = new ArrayList<>(); // Initialize the list
+        this.highScores = new ArrayList<>();
 
         initializeBoard();
     }
 
-    // --- Serialization Getters and Setters (Required by Jackson) ---
+    // --- Serialization Accessors (Used by Jackson) ---
 
     @JsonProperty("gameBoard")
-    public int[][] getBoard() {
-        return gameBoard;
-    }
+    public int[][] getBoard() { return gameBoard; }
 
     @JsonAlias("board")
-    public void setGameBoard(int[][] gameBoard) {
-        this.gameBoard = gameBoard;
-    }
+    public void setGameBoard(int[][] gameBoard) { this.gameBoard = gameBoard; }
 
-    public long getScore() {
-        return score;
-    }
-    public void setScore(long score) {
-        this.score = score;
-    }
+    public long getScore() { return score; }
+    public void setScore(long score) { this.score = score; }
 
-    public boolean isGameOver() {
-        return isGameOver;
-    }
-    public void setGameOver(boolean isGameOver) {
-        this.isGameOver = isGameOver;
-    }
+    public boolean isGameOver() { return isGameOver; }
+    public void setGameOver(boolean isGameOver) { this.isGameOver = isGameOver; }
 
-    public boolean hasWon() {
-        return hasWon;
-    }
-    public void setHasWon(boolean hasWon) {
-        this.hasWon = hasWon;
-    }
+    public boolean hasWon() { return hasWon; }
+    public void setHasWon(boolean hasWon) { this.hasWon = hasWon; }
 
-    public boolean isContinuePlaying() {
-        return continuePlaying;
-    }
-    public void setContinuePlaying(boolean continuePlaying) {
-        this.continuePlaying = continuePlaying;
-    }
+    public boolean isContinuePlaying() { return continuePlaying; }
+    public void setContinuePlaying(boolean continuePlaying) { this.continuePlaying = continuePlaying; }
 
-    // History Getters/Setters for serialization
-    public List<int[][]> getBoardHistory() {
-        return boardHistory;
-    }
-    public void setBoardHistory(List<int[][]> boardHistory) {
-        this.boardHistory = boardHistory;
-    }
+    public List<int[][]> getBoardHistory() { return boardHistory; }
+    public void setBoardHistory(List<int[][]> boardHistory) { this.boardHistory = boardHistory; }
 
-    public List<Long> getScoreHistory() {
-        return scoreHistory;
-    }
-    public void setScoreHistory(List<Long> scoreHistory) {
-        this.scoreHistory = scoreHistory;
-    }
+    public List<Long> getScoreHistory() { return scoreHistory; }
+    public void setScoreHistory(List<Long> scoreHistory) { this.scoreHistory = scoreHistory; }
 
-    // --- Initialization and Spawning ---
+    public List<HighScore> getHighScores() {
+        if (highScores == null) highScores = new ArrayList<>();
+        return highScores;
+    }
+    public void setHighScores(List<HighScore> highScores) { this.highScores = highScores; }
 
+    // --- Core Logic ---
+
+    // Clears board and spawns initial tiles
     private void initializeBoard() {
         for (int i = 0; i < BOARD_SIZE; i++) {
             for (int j = 0; j < BOARD_SIZE; j++) {
@@ -133,43 +103,23 @@ public class GameController {
         spawnNewTile();
         spawnNewTile();
     }
-    // --- High Score Logic ---
-    // UPDATED: Now accepts a name
+
+    // Adds a new score, sorts list, and keeps top 10
     public void addHighScore(String name, long score) {
         highScores.add(new HighScore(name, score));
         Collections.sort(highScores);
-
-        // Keep only top 10 scores
         if (highScores.size() > 10) {
             highScores = highScores.subList(0, 10);
         }
     }
+
+    // Checks if a score qualifies for the top 10
     public boolean isHighScore(long currentScore) {
-        if (highScores.size() < 10) {
-            return true; // List isn't full, so it's a high score
-        }
-        // Check if current score beats the lowest score on the list
-        long lowestScore = highScores.get(highScores.size() - 1).getScore();
-        return currentScore > lowestScore;
+        if (highScores.size() < 10) return true;
+        return currentScore > highScores.get(highScores.size() - 1).getScore();
     }
 
-
-
-    public List<HighScore> getHighScores() {
-        if (highScores == null) {
-            highScores = new ArrayList<>();
-        }
-        return highScores;
-    }
-
-    // Setter for Jackson
-    public void setHighScores(List<HighScore> highScores) {
-        this.highScores = highScores;
-    }
-
-    /**
-     * Spawns a new tile (90% chance of 2, 10% chance of 4) in a random empty spot.
-     */
+    // Spawns a 2 (90%) or 4 (10%) in a random empty cell
     public void spawnNewTile() {
         List<int[]> emptyCells = new ArrayList<>();
         for (int r = 0; r < BOARD_SIZE; r++) {
@@ -182,30 +132,17 @@ public class GameController {
 
         if (!emptyCells.isEmpty()) {
             int[] cell = emptyCells.get(random.nextInt(emptyCells.size()));
-            int r = cell[0];
-            int c = cell[1];
-
-            gameBoard[r][c] = random.nextDouble() < 0.9 ? 2 : 4;
+            gameBoard[cell[0]][cell[1]] = random.nextDouble() < 0.9 ? 2 : 4;
         } else if (!isGameOver) {
             checkGameOver();
         }
     }
 
-    // --- Core Game Logic ---
-
-    /**
-     * Handles a single move based on user input.
-     * @param direction The direction of the move.
-     * @return true if the board state changed, false otherwise.
-     */
+    // Main entry for player moves; returns true if board changed
     public boolean handleMove(Direction direction) {
-        // Prevent moves if the game is over OR if the user hasn't chosen to continue after winning
-        if (isGameOver || (hasWon && !continuePlaying)) {
-            return false;
-        }
+        if (isGameOver || (hasWon && !continuePlaying)) return false;
 
-        // 1. Save current state BEFORE the move
-        saveHistoryState();
+        saveHistoryState(); // Snapshot for undo
 
         int[][] originalBoard = deepCopy(gameBoard);
         boolean moved = applyMoveLogic(direction);
@@ -214,39 +151,38 @@ public class GameController {
             spawnNewTile();
             checkGameOver();
         } else {
-            // If no move occurred, discard the saved state
-            discardLastHistoryState();
+            discardLastHistoryState(); // No move happened, don't save undo state
         }
         return !boardsEqual(originalBoard, gameBoard);
     }
 
+    // Applies transformation logic based on direction
     private boolean applyMoveLogic(Direction direction) {
         boolean moved = false;
         switch (direction) {
-            case UP:
+            case UP -> {
                 transposeBoard();
                 moved = slideAndMergeLeft();
                 transposeBoard();
-                break;
-            case DOWN:
+            }
+            case DOWN -> {
                 transposeBoard();
                 reverseRows();
                 moved = slideAndMergeLeft();
                 reverseRows();
                 transposeBoard();
-                break;
-            case LEFT:
-                moved = slideAndMergeLeft();
-                break;
-            case RIGHT:
+            }
+            case LEFT -> moved = slideAndMergeLeft();
+            case RIGHT -> {
                 reverseRows();
                 moved = slideAndMergeLeft();
                 reverseRows();
-                break;
+            }
         }
         return moved;
     }
 
+    // Core logic: slides tiles to left and merges duplicates
     private boolean slideAndMergeLeft() {
         boolean changed = false;
 
@@ -255,36 +191,29 @@ public class GameController {
             int[] newRow = new int[BOARD_SIZE];
             int current = 0;
 
+            // Slide non-zero values to the left
             for (int c = 0; c < BOARD_SIZE; c++) {
-                if (row[c] != 0) {
-                    newRow[current++] = row[c];
-                }
+                if (row[c] != 0) newRow[current++] = row[c];
             }
 
-            if (!rowEquals(row, newRow)) {
-                changed = true;
-            }
+            if (!rowEquals(row, newRow)) changed = true;
 
+            // Merge adjacent equal values
             for (int i = 0; i < BOARD_SIZE - 1; i++) {
                 if (newRow[i] != 0 && newRow[i] == newRow[i + 1]) {
                     newRow[i] *= 2;
                     score += newRow[i];
                     newRow[i + 1] = 0;
                     changed = true;
-
-                    // Check for win condition immediately after merge
-                    if (newRow[i] == WINNING_TILE_VALUE) {
-                        hasWon = true;
-                    }
+                    if (newRow[i] == WINNING_TILE_VALUE) hasWon = true;
                 }
             }
 
+            // Slide again after merge to fill gaps
             int[] finalRow = new int[BOARD_SIZE];
             current = 0;
             for (int i = 0; i < BOARD_SIZE; i++) {
-                if (newRow[i] != 0) {
-                    finalRow[current++] = newRow[i];
-                }
+                if (newRow[i] != 0) finalRow[current++] = newRow[i];
             }
 
             gameBoard[r] = finalRow;
@@ -292,6 +221,7 @@ public class GameController {
         return changed;
     }
 
+    // Board manipulation helpers for directional logic
     private void reverseRows() {
         for (int r = 0; r < BOARD_SIZE; r++) {
             for (int c = 0; c < BOARD_SIZE / 2; c++) {
@@ -312,6 +242,7 @@ public class GameController {
         gameBoard = newBoard;
     }
 
+    // Checks for empty spots or possible merges
     public void checkGameOver() {
         for (int r = 0; r < BOARD_SIZE; r++) {
             for (int c = 0; c < BOARD_SIZE; c++) {
@@ -321,7 +252,7 @@ public class GameController {
                 }
             }
         }
-
+        // Check horizontal merges
         for (int r = 0; r < BOARD_SIZE; r++) {
             for (int c = 0; c < BOARD_SIZE - 1; c++) {
                 if (gameBoard[r][c] == gameBoard[r][c + 1]) {
@@ -330,7 +261,7 @@ public class GameController {
                 }
             }
         }
-
+        // Check vertical merges
         for (int r = 0; r < BOARD_SIZE - 1; r++) {
             for (int c = 0; c < BOARD_SIZE; c++) {
                 if (gameBoard[r][c] == gameBoard[r + 1][c]) {
@@ -342,25 +273,17 @@ public class GameController {
         isGameOver = true;
     }
 
+    // --- Undo Logic ---
 
-    // --- Undo Functionality ---
-
-    /**
-     * Saves the current game state (board and score) to the history lists.
-     */
     private void saveHistoryState() {
         if (boardHistory.size() >= HISTORY_LIMIT) {
-            // Remove the oldest state if history limit is reached
-            boardHistory.removeFirst();
-            scoreHistory.removeFirst();
+            boardHistory.remove(0);
+            scoreHistory.remove(0);
         }
         boardHistory.add(deepCopy(gameBoard));
         scoreHistory.add(score);
     }
 
-    /**
-     * Discards the last saved history state (used when a move resulted in no change).
-     */
     private void discardLastHistoryState() {
         if (!boardHistory.isEmpty()) {
             boardHistory.remove(boardHistory.size() - 1);
@@ -368,43 +291,29 @@ public class GameController {
         }
     }
 
-    /**
-     * Attempts to restore the previous game state from history.
-     * @return true if an undo operation was performed, false otherwise.
-     */
     public boolean undo() {
         if (canUndo()) {
-            // Remove current state from history (since we are undoing)
             int lastIndex = boardHistory.size() - 1;
-
             gameBoard = boardHistory.remove(lastIndex);
             score = scoreHistory.remove(lastIndex);
-
-            // Recalculate game over status since the state changed
             checkGameOver();
             return true;
         }
         return false;
     }
 
-    /**
-     * Checks if there is a previous state available for undo.
-     */
     public boolean canUndo() {
-        // We only allow undo if there is at least one recorded state
         return !boardHistory.isEmpty();
     }
 
-
-    // --- Persistence (JSON Save/Load using Jackson) ---
+    // --- Persistence ---
 
     public void saveGame(String filePath) {
         ObjectMapper mapper = new ObjectMapper();
         ObjectWriter writer = mapper.writerWithDefaultPrettyPrinter();
-
         try {
             writer.writeValue(new File(filePath), this);
-            System.out.println("Game saved successfully to " + filePath);
+            System.out.println("Game saved to " + filePath);
         } catch (IOException e) {
             System.err.println("Error saving game: " + e.getMessage());
         }
@@ -414,15 +323,12 @@ public class GameController {
         ObjectMapper mapper = new ObjectMapper();
         try {
             GameController loadedGame = mapper.readValue(new File(filePath), GameController.class);
-
             loadedGame.checkGameOver();
-            System.out.println("Game loaded successfully from " + filePath);
+            System.out.println("Game loaded from " + filePath);
             return loadedGame;
-
         } catch (FileNotFoundException e) {
-            System.out.println("No save game found. Starting new game.");
+            System.out.println("No save found. Starting new game.");
         } catch (IOException e) {
-            System.err.println("Error loading or parsing game data: " + e.getMessage());
             e.printStackTrace();
         }
         return new GameController();
@@ -436,9 +342,8 @@ public class GameController {
         return SAVE_FILE;
     }
 
-    // --- Helper Methods ---
+    // --- Utility Methods ---
 
-    /** Deep copies the 2D array. */
     private int[][] deepCopy(int[][] source) {
         int[][] destination = new int[BOARD_SIZE][BOARD_SIZE];
         for (int i = 0; i < BOARD_SIZE; i++) {
@@ -447,24 +352,18 @@ public class GameController {
         return destination;
     }
 
-    /** Checks if two boards are structurally and element-wise equal. */
-    private boolean boardsEqual(int[][] board1, int[][] board2) {
+    private boolean boardsEqual(int[][] b1, int[][] b2) {
         for (int r = 0; r < BOARD_SIZE; r++) {
             for (int c = 0; c < BOARD_SIZE; c++) {
-                if (board1[r][c] != board2[r][c]) {
-                    return false;
-                }
+                if (b1[r][c] != b2[r][c]) return false;
             }
         }
         return true;
     }
 
-    /** Checks if two rows are element-wise equal. */
-    private boolean rowEquals(int[] row1, int[] row2) {
+    private boolean rowEquals(int[] r1, int[] r2) {
         for (int i = 0; i < BOARD_SIZE; i++) {
-            if (row1[i] != row2[i]) {
-                return false;
-            }
+            if (r1[i] != r2[i]) return false;
         }
         return true;
     }
